--- a/pages/index.css
+++ b/pages/index.css
@@ -9,6 +9,15 @@
     max-width: 1280px;
     margin: 0 auto;
 }
+
+button {
+    opacity: 1;
+    transition: opacity .15s;
+}
+button:hover {
+    opacity: .6;
+    cursor: pointer;
+}
 /*_____________________________________________________header_________________________________________________*/
 
 .header {
@@ -105,6 +114,7 @@
     margin-left: 18px;
     margin-bottom: 16px;
 }
+
 
 .profile__subtitle {
     font-size: 18px;
