--- a/pages/index.css
+++ b/pages/index.css
@@ -233,9 +233,7 @@ button:hover {
 /*______________________________________________________________POPUP__________________________________________________________*/
 
 .popup {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: none;
     position: fixed;
     background: rgba(0, 0, 0, .5);
     top: 0;
@@ -243,7 +241,11 @@ button:hover {
     width: 100%;
     height: 100%;
     z-index: 111;
-
+}
+.popup_open {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .popup__edit-form {
