--- a/pages/index.css
+++ b/pages/index.css
@@ -1,317 +1,50 @@
-@import url(//vendor/normalize.css);
-@import url(/vendor/fonts.css);
+@import url(../vendor/normalize.css);
+@import url(../vendor/fonts.css);
 
-.page {
-    background: #000;
-    color: #fff;
-    font-family: 'inter', Arial, Helvetica, sans-serif;
-    min-width: 320px;
-    max-width: 1280px;
-    margin: 0 auto;
-}
-
-button {
-    opacity: 1;
-    transition: opacity .15s;
-}
-button:hover {
-    opacity: .6;
-    cursor: pointer;
-}
+@import url(../blocks/page/page.css);
 /*_____________________________________________________header_________________________________________________*/
 
-.header {
-    margin: 0 auto;
-    max-width: 880px;
-    border-bottom: 1px solid #545454;
-}
-
-.header__logo {
-    margin: 45px 0 41px;
-}
-
-@media screen and (max-width: 879px) {
-    .header__logo {
-        margin: 28px 27px 31.6px;
-    }
-}
+@import url(../blocks/header/header.css);
+@import url(../blocks/header/__logo/header__logo.css);
 
 
 /*____________________________________________________profile____________________________________________*/
 
-.profile {
-    display: flex;
-    max-width: 880px;
-    margin: 36.25px auto 0;
-    align-items: center;
-}
-@media screen and (max-width: 879px) {
-    .profile {
-        flex-direction: column;
-    }
-}
+@import url(../blocks/profile/profile.css);
+@import url(../blocks/profile/__avatar/profile__avatar.css);
 
-.profile__avatar {
-    display: flex;
-    border-radius: 50%;
-    overflow: hidden;
-    width: 120px;
-    height: 120px;
-    margin-right: 30px;
-    flex-shrink: 0;
-}
-@media screen and (max-width: 879px) {
-    .profile__avatar {
-        margin: 0;
-    }
-}
+@import url(../blocks/profile/__info/profile__info.css);
 
-.profile__img {
-    object-fit: cover;
-    align-self: center;
-}
-
-.profile__info {
-    display: flex;
-    align-items: flex-start;
-    flex-direction: column;
-    margin: 0;
-    width: 100%;
-}
-@media screen and (max-width: 879px) {
-    .profile__info {
-        align-items: center;
-    }
-}
-
-.profile__info-discription {
-    display: flex;
-    align-items: baseline;
-    flex-wrap: nowrap;
-}
-
-.profile__title {
-    font-size: 42px;
-    font-weight: 500;
-    line-height: 48px;
-    margin: 22px auto 0;
-}
-
-@media screen and (max-width: 879px) {
-    .profile__title {
-        font-size: 27px;
-        line-height: 33px;
-    }
-}
-
-.profile__edit-btn {
-    background: url(../images/edit-btn.svg) 100% 100% no-repeat;
-    background-position: center;
-    object-fit: cover;
-    width: 24px;
-    height: 24px;
-    border: 1px solid #FFF;
-    margin-left: 18px;
-    margin-bottom: 16px;
-}
+@import url(../blocks/profile/__info/__info-discription/profile__info-discription.css);
+@import url(../blocks/profile/__info/__info-discription/__title/profile__title.css);
+@import url(../blocks/profile/__info/__info-discription/__edit-btn/profile__edit-btn.css);
 
 
-.profile__subtitle {
-    font-size: 18px;
-    line-height: 22px;
-    font-weight: 400;
-    margin: 0;
-}
+@import url(../blocks/profile/__info/__subtitle/profile__subtitle.css);
 
-.profile__add-btn {
-    background: url(../images/add.svg) 100% 100% no-repeat;
-    width: 150px;
-    height: 50px;
-    margin: auto;
-    border: 2px solid #FFF;
-    border-radius: 2px;
-    background-position: center;
-}
-@media screen and (max-width:879px) {
-    .profile__add-button {
-        width: 282px;
-        margin-top: 36px;
-    }
-}
+@import url(../blocks/profile/__add-btn/profile__add-btn.css);
+
 /*__________________________________________________________ELEMENTS_________________________________________________________________*/
 
 
-.elements {
-    display: grid;
-    grid-template-columns: repeat(3, 282px);
-    max-width: 880px;
-    column-gap: 17px;
-    row-gap: 20px;
-    margin: 51px auto 0;
-    justify-content: center;
-    justify-items: center;
-}
-
-@media screen and (max-width: 879px) {
-    .elements {
-        grid-template-columns: repeat(2, 282px);
-        margin: 36px auto 0;
-    }
-}
-@media screen and (max-width: 629px) {
-    .elements {
-        grid-template-columns: repeat(1, 282px);
-        margin: 36px 19px 0;
-    }
-}
-
-.element {
-    display: flex;
-    flex-direction: column;
-    max-width: 282px;
-    margin: 0;
-    border-radius: 10px;
-    overflow: hidden;
-}
-@media screen and (max-width: 879px) {
-    .element {
-        margin: 0 auto;
-    }
-}
-
-.element__img {
-    object-fit: cover;
-    width: 100%;
-    aspect-ratio: 1/1;
-}
-
-.element__caption {
-    display: flex;
-    background-color: #FFF;
-    color: #000;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 20px 0 21px;
-}
-
-.element__title {
-    font-size: 24px;
-    font-weight: 900;
-    line-height: 29px;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    max-width: 190px;
-}
-
-.element__like-btn {
-    background: url(../images/like.svg) 100% 100% no-repeat;
-    width: 22px;
-    height: 19px;
-    flex-shrink: 0;
-    background-position: center;
-    background-size: cover;
-    border-style: none;
-}
+@import url(../blocks/elements/elements.css);
+@import url(../blocks/elements/element/element.css);
+@import url(../blocks/elements/element/__img/element__img.css);
+@import url(../blocks/elements/element/__caption/element__caption.css);
+@import url(../blocks/elements/element/__caption/__title/element__title.css);
+@import url(../blocks/elements/element/__caption/__like-btn/element__like-btn.css);
 
 /*_________________________________________________________________FOOTER_________________________________________________________*/
 
-.footer {
-    margin: 67px auto 60px;
-    max-width: 880px;
-    color: #545454;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 22px;
-}
-
-@media screen and (max-width: 879px) {
-    .footer {
-        margin: 48px auto 36px;
-    }
-}
-
+@import url(../blocks/footer/footer.css);
 
 /*______________________________________________________________POPUP__________________________________________________________*/
 
-.popup {
-    display: none;
-    position: fixed;
-    background: rgba(0, 0, 0, .5);
-    top: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 111;
-}
-.popup_open {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.popup__edit-form {
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    background-color: #FFF;
-    color: #000;
-    max-width: 358px;
-    width: 100%;
-    padding: 34px 36px 37px;
-    border-radius: 10px;
-    box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
-}
-
-.popup__close-btn {
-    background: url(../images/Close\ Icon.svg) 100% 100% no-repeat;
-    background-position: center;
-    background-size: cover;
-    width: 32px;
-    height: 32px;
-    border: none;
-    position: absolute;
-    top: -40px;
-    right: -40px;
-}
-
-.popup__title {
-    font-size: 24px;
-    font-weight: 900;
-    line-height: 29px;
-    margin: 0 0 47px;
-}
-
-.popup__form {
-    display: flex;
-    flex-direction: column;
-}
-
-.popup__text {
-    font-size: 14px;
-    font-weight: 400px;
-    line-height: 17px;
-    border: none;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-    padding: 0 0 13px;
-}
-
-.popup__text:nth-child(2) {
-    margin-top: 30px;
-}
-
-.popup__submit-btn {
-    background-color: #000;
-    color: #FFF;
-    width: 358px;
-    height: 50px;
-    border-radius: 2px;
-    border: none;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 22px;
-    text-align: center;
-    margin: 48px auto 0;
-}
-
-
+@import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/__edit-form/popup__edit-form.css);
+@import url(../blocks/popup/__edit-form/__close-btn/popup__close-btn.css);
+@import url(../blocks/popup/__edit-form/__title/popup__title.css);
+@import url(../blocks/popup/__edit-form/__form/popup__form.css);
+@import url(../blocks/popup/__edit-form/__form/__text/popup__text.css);
+@import url(../blocks/popup/__edit-form/__form/__submit-btn/popup__submit-btn.css);
+@import url(../blocks/popup/_open/popup_open.css);
