--- a/blocks/profile/__edit-btn/profile__edit-btn.css
+++ b/blocks/profile/__edit-btn/profile__edit-btn.css
@@ -1,5 +1,5 @@
 .profile__edit-btn {
-    background: url(../../../../../images/edit-btn.svg) 100% 100% no-repeat;
+    background: url(../../../images/edit-btn.svg) 100% 100% no-repeat;
     background-position: center;
     object-fit: cover;
     width: 24px;
