--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,4 +1,4 @@
-.profile__title {
+.profile__name {
     font-size: 42px;
     font-weight: 500;
     line-height: 48px;
@@ -6,7 +6,7 @@
 }
 
 @media screen and (max-width: 879px) {
-    .profile__title {
+    .profile__name {
         font-size: 27px;
         line-height: 33px;
     }
