--- a/blocks/popup/__close-btn/popup__close-btn.css
+++ b/blocks/popup/__close-btn/popup__close-btn.css
@@ -1,5 +1,5 @@
 .popup__close-btn {
-    background: url(../../../../images/Close\ Icon.svg) 100% 100% no-repeat;
+    background: url(../../../images/Close\ Icon.svg) 100% 100% no-repeat;
     background-position: center;
     background-size: cover;
     width: 32px;
