--- a/blocks/profile/__edit-btn/profile__edit-btn.css
+++ b/blocks/profile/__edit-btn/profile__edit-btn.css
@@ -5,6 +5,7 @@
     width: 24px;
     height: 24px;
     border: 1px solid #FFF;
-    margin-left: 18px;
+    margin-left:  18px;
     margin-bottom: 16px;
+    flex-shrink: 0;
 }
