--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -3,7 +3,10 @@
     font-weight: 500;
     line-height: 48px;
     margin: 22px auto 0;
-}
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    max-width: 400px;
 
 @media screen and (max-width: 879px) {
     .profile__name {
