hotfix: исправить реакцию кнопок на :hover

--- a/blocks/element/__like-btn/element__like-btn.css
+++ b/blocks/element/__like-btn/element__like-btn.css
@@ -6,4 +6,11 @@
     background-position: center;
     background-size: cover;
     border-style: none;
+    opacity: 1;
+    transition: opacity .15s;
+}
+
+.element__like-btn:hover {
+    opacity: .5;
+    cursor: pointer;
 }
