--- a/blocks/popup/__close-btn/popup__close-btn.css
+++ b/blocks/popup/__close-btn/popup__close-btn.css
@@ -8,4 +8,11 @@
     position: absolute;
     top: -40px;
     right: -40px;
+    opacity: 1;
+    transition: opacity .15s;
+}
+
+.popup__close-btn:hover {
+    opacity: .6;
+    cursor: pointer;
 }
