--- a/blocks/profile/__add-btn/profile__add-btn.css
+++ b/blocks/profile/__add-btn/profile__add-btn.css
@@ -7,10 +7,17 @@
     border-radius: 2px;
     background-position: center;
     flex-shrink: 0;
+    opacity: 1;
+    transition: opacity .15s;
 }
 @media screen and (max-width:879px) {
     .profile__add-btn {
         width: 282px;
         margin-top: 36px;
     }
+}
+
+.profile__add-btn:hover {
+    opacity: .6;
+    cursor: pointer;
 }
