--- a/blocks/profile/__edit-btn/profile__edit-btn.css
+++ b/blocks/profile/__edit-btn/profile__edit-btn.css
@@ -8,4 +8,11 @@
     margin-left:  18px;
     margin-bottom: 16px;
     flex-shrink: 0;
+    opacity: 1;
+    transition: opacity .15s;
+}
+
+.profile__edit-btn:hover {
+    opacity: .6;
+    cursor: pointer;
 }
