hotfix: исправить недоработки первой итерации, стили попап для мобильных разрешений

--- a/pages/index.css
+++ b/pages/index.css
@@ -38,6 +38,7 @@
 /*_________________________________________________________________FOOTER_________________________________________________________*/
 
 @import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
 
 /*______________________________________________________________POPUP__________________________________________________________*/
 
