--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,9 +1,16 @@
 .header__logo {
     margin: 45px 0 41px;
+    width: 142px;
 }
 
 @media screen and (max-width: 879px) {
     .header__logo {
         margin: 28px 27px 31.6px;
+    }
+}
+
+@media screen and (max-width: 629px) {
+    .header__logo {
+        width: 103.74px;
     }
 }
