--- a/blocks/popup/__close-btn/popup__close-btn.css
+++ b/blocks/popup/__close-btn/popup__close-btn.css
@@ -11,6 +11,15 @@
     opacity: 1;
     transition: opacity .15s;
 }
+@media screen and (max-width: 629px) {
+    .popup__close-btn{
+        background-size: 20px 20px;
+        width: 20px;
+        height: 20px;
+        top: -35px;
+        right: 0;
+    }
+}
 
 .popup__close-btn:hover {
     opacity: .6;
