--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -5,8 +5,14 @@
     background-color: #FFF;
     color: #000;
     max-width: 358px;
-    width: 100%;
     padding: 34px 36px 37px;
     border-radius: 10px;
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
+}
+
+@media screen and (max-width: 629px) {
+    .popup__container {
+        max-width: 238px;
+        padding: 25px 22px;
+    }
 }
