--- a/blocks/popup/__submit-btn/popup__submit-btn.css
+++ b/blocks/popup/__submit-btn/popup__submit-btn.css
@@ -14,6 +14,16 @@
     transition: opacity .15s;
 }
 
+@media screen and (max-width: 629px) {
+    .popup__submit-btn {
+        width: 238px;
+        height: 46px;
+        font-size: 14px;
+        line-height: 17px;
+        margin-top: 45px;
+    }
+}
+
 .popup__submit-btn:hover {
     opacity: .8;
     cursor: pointer;
