--- a/blocks/popup/__text/popup__text.css
+++ b/blocks/popup/__text/popup__text.css
@@ -1,6 +1,6 @@
 .popup__text {
     font-size: 14px;
-    font-weight: 400px;
+    font-weight: 400;
     line-height: 17px;
     border: none;
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
