--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -4,3 +4,11 @@
     line-height: 29px;
     margin: 0 0 47px;
 }
+
+@media screen and (max-width: 629px) {
+    .popup__title {
+        font-size: 18px;
+        line-height: 22px;
+        margin-bottom: 75px;
+    }
+}
