--- a/blocks/profile/__edit-btn/profile__edit-btn.css
+++ b/blocks/profile/__edit-btn/profile__edit-btn.css
@@ -12,6 +12,14 @@
     transition: opacity .15s;
 }
 
+@media screen and (max-width: 629px) {
+    .profile__edit-btn {
+        width: 18px;
+        height: 18px;
+        margin-left: 10px;
+    }
+}
+
 .profile__edit-btn:hover {
     opacity: .6;
     cursor: pointer;
