--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -15,3 +15,9 @@
         line-height: 33px;
     }
 }
+
+@media screen and (max-width: 767px) {
+    .profile__name {
+        max-width: 220px;
+    }
+}
