--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -8,3 +8,11 @@
     overflow: hidden;
     max-width: 400px;
 }
+
+@media screen and (max-width: 767px) {
+    .profile__subtitle {
+        max-width: 220px;
+        font-size: 14px;
+        line-height: 17px;
+    }
+}
