--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -5,6 +5,8 @@
     margin: 0;
     border-radius: 10px;
     overflow: hidden;
+    box-sizing: border-box;
+    position: relative;
 }
 @media screen and (max-width: 879px) {
     .element {
