--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,5 +1,5 @@
 .popup {
-    display: none;
+    display: flex;
     justify-content: center;
     align-items: center;
     position: fixed;
@@ -9,4 +9,6 @@
     width: 100%;
     height: 100%;
     z-index: 111;
+    visibility: hidden;
+    transition: visibility .15s, opacity .15s linear;
 }
