--- a/pages/index.css
+++ b/pages/index.css
@@ -54,3 +54,4 @@
 @import url(../blocks/popup/__img-container/popup__img-container.css);
 @import url(../blocks/popup/__img-text/popup__img-text.css);
 @import url(../blocks/popup/__image/popup__image.css);
+@import url(../blocks/imgPopup/imgPopup.css);
