--- a/blocks/popup/__text/popup__text.css
+++ b/blocks/popup/__text/popup__text.css
@@ -7,6 +7,6 @@
     padding: 0 0 13px;
 }
 
-.popup__text:nth-child(2) {
-    margin-top: 30px;
+.popup__text:nth-child(3) {
+    padding-top: 13px;
 }
