--- a/pages/index.css
+++ b/pages/index.css
@@ -55,3 +55,6 @@
 @import url(../blocks/popup/__img-text/popup__img-text.css);
 @import url(../blocks/popup/__image/popup__image.css);
 @import url(../blocks/imgPopup/imgPopup.css);
+@import url(../blocks/popup/__text/_type/popup__text_type_invalid.css);
+@import url(../blocks/popup/__text/popup__text-error.css);
+@import url(../blocks/popup/__submit-btn/_inactive/popup__submit-btn_inactive.css);
