--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -1,7 +1,7 @@
 .element {
     display: flex;
     flex-direction: column;
-    max-width: 282px;
+    width: 282px;
     margin: 0;
     border-radius: 10px;
     overflow: hidden;
