--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -35,7 +35,7 @@
 @import url(../blocks/element/__title/element__title.css);
 @import url(../blocks/element/__like-btn/element__like-btn.css);
 @import url(../blocks/element/__like-btn/_active/element__like-btn_active.css);
-
+@import url(../blocks/element/__like-counter/element__like-counter.css);
 /*_________________________________________________________________FOOTER_________________________________________________________*/
 
 @import url(../blocks/footer/footer.css);
