--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -6,9 +6,29 @@
     height: 120px;
     margin-right: 30px;
     flex-shrink: 0;
+    opacity: 1;
+    transition: opacity .25s ease;
 }
 @media screen and (max-width: 879px) {
     .profile__avatar {
         margin: 0;
     }
+}
+
+.profile__avatar:hover {
+    opacity: .2;
+}
+
+.profile__overlay-container {
+    position: relative;
+    background-color: #000 80%;
+    background: url(../../../images/VectorAvatar.svg) 100% 100% no-repeat;
+    background-position: center;
+}
+
+.profile__overlay {
+    position:absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 1;
 }
