--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@
 .header{border-bottom:1px solid #545454;margin:0 auto;max-width:880px}
 .header__logo{margin:45px 0 41px;width:142px}@media screen and (max-width:879px){.header__logo{margin:28px 27px 31.6px}}@media screen and (max-width:629px){.header__logo{width:103.74px}}
 .profile{align-items:center;display:flex;margin:36.25px auto 0;max-width:880px}@media screen and (max-width:879px){.profile{flex-direction:column}}
-.profile__avatar{border-radius:50%;display:flex;flex-shrink:0;height:120px;margin-right:30px;overflow:hidden;width:120px}@media screen and (max-width:879px){.profile__avatar{margin:0}}
+.profile__avatar{border-radius:50%;display:flex;flex-shrink:0;height:120px;margin-right:30px;opacity:1;overflow:hidden;transition:opacity .25s ease;width:120px}@media screen and (max-width:879px){.profile__avatar{margin:0}}.profile__avatar:hover{opacity:.2}.profile__overlay-container{background-color:#000 80%;background:url(images/a086f758840ae814ecde.svg) 100% 100% no-repeat;background-position:50%;position:relative}.profile__overlay{left:50%;position:absolute;top:50%;z-index:1}
 .profile__info{align-items:flex-start;display:flex;flex-direction:column;margin:0;width:100%}@media screen and (max-width:879px){.profile__info{align-items:center;max-width:282px}}
 .profile__title{align-items:baseline;display:flex;flex-wrap:nowrap}
 .profile__name{font-size:42px;font-weight:500;line-height:48px;margin:22px auto 0;max-width:400px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}@media screen and (max-width:879px){.profile__name{font-size:27px;line-height:33px}}@media screen and (max-width:767px){.profile__name{max-width:220px}}
@@ -37,4 +37,5 @@
 .popup__text_type_invalid{border-bottom:1px solid red}
 .popup__text-error{color:red;font-size:12px;font-weight:400;line-height:15px;min-height:30px;padding-top:5px}
 .popup__submit-btn_inactive{background-color:transparent;border:1px solid rgba(0,0,0,.2);color:rgba(0,0,0,.2)}
+.popup__confirm{margin-bottom:0}
 
