--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -4,10 +4,10 @@
     overflow: hidden;
     width: 120px;
     height: 120px;
-    margin-right: 30px;
     flex-shrink: 0;
     opacity: 1;
     transition: opacity .25s ease;
+    object-fit: cover;
 }
 @media screen and (max-width: 879px) {
     .profile__avatar {
@@ -24,6 +24,7 @@
     background-color: #000 80%;
     background: url(../../../images/VectorAvatar.svg) 100% 100% no-repeat;
     background-position: center;
+    margin-right: 30px;
 }
 
 .profile__overlay {
